--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/district
 spring.datasource.username=jle
-spring.datasource.password=0103
+spring.datasource.password=J01m22l96!
 spring.jpa.hibernate.ddl-auto=update
